tests/negative/array_reassign_oob_index_assign.far
fun main() -> i64 {
  a = [1, 2, 3]
  a = [1, 2]
  a[2] = 9
  return 0
}
